2008-08-04  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs: Add test cases for events.
	Compilers generates default add/remove methods for them and they
	should not be reported since they are outside developer's control.

2008-07-26  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs: Add test case for detected 
	unused properties (Marek Safar) and add another test case for 
	generics (Richard Birkby)
	[Fix bug #410000]

2008-07-23  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnusedPrivateFieldsTest.cs: Modify test cases to ignore
	literals. Remove Ignore from generic test since DefinitionLoader was
	fixed (the problem was not related to mono).

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLargeNumberOfLocalVariablesTest.cs: New. Unit tests
	for AvoidLargeNumberOfLocalVariablesRule.

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnusedPrivateFieldsTest.cs: New. Unit tests for 
	AvoidUnusedPrivateFieldsRule. There is a bug that prevent from
	running the generic test on mono (needs more investigation) but
	the rule itself works.

2008-07-05  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRepetitiveCastsTest.cs: New. Unit tests for 
	AvoidRepetitiveCastsRule.
	* Test.Rules.Performance.mdp: Update MD project file.

2008-06-28  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLargeStructureTest.cs: Add test case for arrays.

2008-06-27  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidTypeGetTypeForConstantStringsTest.cs: New. Unit tests for
	AvoidTypeGetTypeForConstantStringsRule.
	* Test.Rules.Performance.mdp: Update MD project file.

2008-06-11  Jb Evain  <jbevain@novell.com>

	* AvoidUninstantiatedInternalClassesTest.cs: add tests for
	the sealed + private ctor case, and abstract + private ctor case.

2008-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderCustomAccessorsForNonVisibleEventsTest.cs: New. Unit